# ogssim

./: Makefile  OGSSim.1  README.md
example/: arch_draid.xml  arch_jbod.xml  arch_raid01.xml  arch_raid1.xml  arch_raidnp.xml  config.xml  hdd_hitachi_A7K1000.xml  ssd_transcend_370.xml  trace.data
include/ComputationModels/: cmbusadvanced.hpp  cmbusdefault.hpp  cmdiskhdd.hpp  cmdiskssd.hpp  (+1 more)
src/: CMakeLists.txt  main.cpp
src/ComputationModels/: cmbusadvanced.cpp  cmbusdefault.cpp  cmdiskhdd.cpp  cmdiskssd.cpp  computationmodel.cpp
src/DecRAIDSchemes/: drdscheme.cpp  drdschemecrush.cpp  drdschemesd2s.cpp
src/Drivers/: decraiddriver.cpp  devicedriver.cpp  ivolume.cpp  volumedriver.cpp
src/GraphGeneration/: graphgenbusbehavior.cpp  graphgendevbehavior.cpp  graphgeneration.cpp  graphgenfullreqpercentile.cpp  graphgenreqpercentile.cpp
src/LayoutModels/: layoutjbod.cpp  layoutmodel.cpp  layoutraid01.cpp  layoutraid1.cpp  layoutraidnp.cpp  layoutraidnp_read_dtdecl.cpp  layoutraidnp_read_nodecl.cpp  layoutraidnp_read_prdecl.cpp  layoutraidnp_write_dtdecl.cpp  layoutraidnp_write_nodecl.cpp  layoutraidnp_write_noparity.cpp  layoutraidnp_write_prdecl.cpp
src/Modules/: eventreader.cpp  execution.cpp  hardwareconfiguration.cpp  performanceevaluation.cpp  preprocessing.cpp  workload.cpp
src/Structures/: architecture.cpp  requestarray.cpp  requestarray0.cpp  requestarray1.cpp  requestarray2.cpp
src/Utils/: .synchro.cpp.swp  chrono.cpp  mathutils.cpp
src/XMLParsers/: xmldevparser.cpp  xmlgraphparser.cpp  xmlhcparser.cpp  xmlparser.cpp  xmlsimparser.cpp
(+40 files in other folders)
